fix some spacing issues with graphs

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,13 +1,15 @@
-.rv-xy-plot__inner {
-  padding-left: 20px;
+.rv-xy-plot {
+  padding-left: 10px;
+  width: 690px;
 }
 
-.rv-xy-plot__axis__title text {
+.rv-xy-plot__inner {
+  padding-left: 20px;
   font-size: 20px;
 }
 
 .rc-slider-rail {
-  background-color: blue;
+  background-color: gray;
 }
 
 .rc-slider-track {
@@ -30,10 +32,6 @@
   text-align: center;
 }
 
-.data-nox .full {
-  width: 100%;
-}
-
 .history-entries {
   font-size: 10px;
   text-align: left;
@@ -53,12 +51,13 @@
 .slider {
   float: left;
   width: 100%;
+  height: 40px;
   padding-left: 20px;
   padding-right: 20px;
 }
 
 .data-boxes {
-  padding-top: 82px;
+  padding-top: 110px;
   text-align: center;
   font-size: 20px;
 }
@@ -68,9 +67,11 @@
 }
 
 .years-range {
+  padding-right: 50px;
   float: right;
 }
 
 .main-title {
+  padding-left: 50px;
   float: left;
 }
